--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,11 +1,14 @@
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
 * {
   box-sizing: border-box; }
 
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Noto Sans KR", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
+  font-weight: 300;
   line-height: 1.5;
   color: #606c71; }
 
@@ -112,7 +115,11 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
+  font-size: 24px;
   color: #159957; }
+.main-content h3 {
+  font-weight: 600;
+}
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
